# codeviewer

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example
.github/workflows/: ci.yml
crates/codeviewer-core/: Cargo.toml  build.rs
crates/codeviewer-core/src/: aggregator.rs  config.rs  error.rs  lib.rs  models.rs  scanner.rs  storage.rs
crates/codeviewer-core/tests/: integration_test.rs
crates/codeviewer-desktop/: Cargo.toml  tauri.conf.json
crates/codeviewer-desktop/icons/: icon.icns
crates/codeviewer-desktop/src/: commands.rs  lib.rs  main.rs  scanner_task.rs  tray.rs
crates/codeviewer-desktop/tests/: tauri_config_test.rs
docs/: obsidian-codex-knowledge-base-plan.md  obsidian-codex-starter-kit.md  ui-ux-design-plan.md
docs/prototypes/: codeviewer-prototype.html
docs/superpowers/plans/: 2026-06-27-codeviewer-tracker.md  2026-07-01-codeviewer-repair.md
docs/superpowers/specs/: 2026-07-01-codeviewer-repair-design.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.test.ts  api.ts  dashboardStats.test.ts  dashboardStats.ts  i18n.tsx  styles.css  types.ts
frontend/src/components/: Dashboard.tsx  Header.tsx  RepositoryDetail.tsx  Settings.tsx  TrendChart.tsx  icons.tsx
