[package]
name = "codeviewer-desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "codeviewer_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
codeviewer-core = { path = "../codeviewer-core" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
